--- a/vcweb/broker/templates/broker/participate.html
+++ b/vcweb/broker/templates/broker/participate.html
@@ -45,7 +45,8 @@
         <div class='controls'>
             <button data-bind='click: startHarvestDecisionTimer' type='button' class='btn btn-primary'>Start harvest decision timer</button>
             <button data-bind='click: startChatTimer' type='button' class='btn btn-primary'>Start chat timer</button>
-             <button data-bind='click: startChatOptionTimer' type='button' class='btn btn-primary'>Start chat option timer</button>
+            <button data-bind='click: startChatOptionTimer' type='button' class='btn btn-primary'>Start chat option timer</button>
+            <button data-bind='click: update' type='button' class='btn btn-primary' data-bind='click: update'>Update</button>
         </div>
     </div>
     </div>
@@ -117,9 +118,6 @@
 	</div>
 </div>
 </script>
-
-
-
 
 <script type='text/html' id='GENERAL_INSTRUCTIONS'>
 <div id='instructions1'>
@@ -460,6 +458,29 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
             model.isTimerRunning = ko.computed(function() {
                 return model.secondsLeft() > 0;
             });
+            model.setupFirstPracticeRoundTour = function() {
+                // set up first bootstrap tour
+
+            };
+            model.setupSecondPracticeRoundTour = function() {
+
+            };
+            model.update = function() {
+                $.get('view-model', { participant_group_id: {{ participant_group_relationship.pk }}, },
+                function(response) {
+                    console.debug("updating with response: ");
+                    console.debug(response);
+                    if (response.success) {
+                        ko.mapping.fromJS(response, model);
+                        if (model.isFirstPracticeRoundTour()) {
+                            model.setupFirstPracticeRoundTour();
+                        }
+                        else if (model.isSecondPracticeRoundTour()) {
+                            model.setupSecondPracticeRoundTour();
+                        }
+                    }
+                });
+            };
             model.templateName = ko.observable("WELCOME");
             // activate instructions click bindings
             model.activateInstructionsPageOne = function() {
@@ -530,8 +551,8 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
                 },
                 1000));
             };
-             model.startChatOptionTimer = function() {
-              	model.enableChatOption();
+            model.startChatOptionTimer = function() {
+                model.enableChatOption();
                 model.secondsLeft(10);
                 model.setCurrentInterval(
                         setInterval(function() {
@@ -588,13 +609,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
 //                 model.chatOptionEnabled(true);
 //             }
 //             
-            
             return model;
-        }
-        function update(experimentModel) {
-            return function(data) {
-                ko.mapping.fromJS(data, experimentModel);
-            }
         }
         function initialize(experimentModelJson) {
             var experimentModel = new ExperimentModel(experimentModelJson);
@@ -609,11 +624,14 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
                         experimentModel.chatMessages.unshift(data);
                         console.debug("received chat message:" + json);
                         break;
+                    case 'update_view_model':
+                        console.debug("updating view model");
+                        experimentModel.update();
+                        break;
                     default:
                         console.debug("unhandled json message:" + json);
                         break;
                 }
-                update(json);
             };
 //             $('#harvestDecision').keyup(function() {
 //                 $('#harvestDecision').val(this.value.match(/\d+/));
