replacing finished_instructions endpoint being used by broker / boundaries experiments with participant_ready in core

--- a/vcweb/broker/templates/broker/participate.html
+++ b/vcweb/broker/templates/broker/participate.html
@@ -505,7 +505,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
             model.networkStructureImageHeight = ko.observable("80px");
             model.finishedInstructions = function() {
                 console.debug("instructions were finished, notifying experimenter");
-                $.post('finished-instructions', { participant_group_id: {{ participant_group_relationship.pk }} }, function(response) {
+                $.post('/experiment/participant-ready', { participant_group_id: {{ participant_group_relationship.pk }} }, function(response) {
                     console.debug("successfully posted to server, notifying sockjs: " + response);
                     getWebSocket().send(createMessageEvent("Instructions completed", "client_ready"));
                 });
