schema refactoring, moving is_experimenter_driven to ExperimentConfiguration from Experiment
is_experimenter_driven now determines whether or not we auto-add participant_ready participant group relationship data
values to each RoundData object at RoundData creation time (when the round is started)

renaming Experiment.current_round_data to get_round_data

adding last harvest decision lookup to boundaries

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -430,7 +430,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
             })
             model.resourcesToDisplay = ko.computed(function() {
                 if (model.resourceLevel() > 0) {
-                    return Math.min(model.resourceLevel(), 20);
+                    return Math.min(model.resourceLevel(), model.maximumResourcesToDisplay());
                 }
                 return 0;
             });
