--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -9,9 +9,9 @@
     <div class='alert alert-message'>
         <h4>{{e.status_line}} <span class='pull-right'><span class='badge badge-important'>{{e.participant_set.count}}</span> participants</span></h4>
         <div class='btn-group'>
-            <a class='btn' href='{{e.monitor_url}}'><img src='{{STATIC_URL}}images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
+            <a class='btn' href='{{e.monitor_url}}'><i class='icon-zoom-in'></i> monitor</a></li>
             <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
-                href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a>
+                href='{{e.clone_url}}'><i class='icon-copy'></i> clone</a>
             {% if e.participant_set.count == 0  %}
             <a class='btn' data-content='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'>
                 <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
@@ -20,10 +20,11 @@
                 <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
             {% else %}
             <a data-content='Remove all participants from the experiment, including any data they may have generated.' href='{{e.controller_url}}/clear-participants' class='btn confirm-experiment-action'>
-                <i class='icon-trash'></i>clear all participants</a></li>
+                <i class='icon-trash'></i> clear all participants</a></li>
             {% endif %}
             {% if e.is_active %}
-            <a data-content='stop this experiment' href='{{e.stop_url}}' class='btn confirm-experiment-action'><i class='icon-stop'></i>stop</a>
+            <a data-content='Mark this experiment as completed' href='{{e.complete_url}}' class='btn confirm-experiment-action'><i class='icon-save'></i> archive</a>
+            <a data-content='deactivate this experiment' href='{{e.deactivate_url}}' class='btn confirm-experiment-action'><i class='icon-off'></i> deactivate</a>
             {% else %}
             <a class='btn' data-content='Configure this experiment (sanitation)' href='{{e.configure_url}}'><i class='icon-wrench'></i>configure</a>
             {% endif %}
