--- a/vcweb/core/templates/500.html
+++ b/vcweb/core/templates/500.html
@@ -5,15 +5,13 @@
 {% endblock %}
 
 {% block page %}
-    <div id='post'>
-        <h2 class='title'>Unhandled server error</h2>
-        <div class='entry'>
-            We just encountered an unforeseen error that has been logged and emailed to
-            our development team.  If you'd like to report this error to us manually
-            as well, please feel free to <a href='/contact'>contact us</a> and let
-            us know what you were doing at the time of the error and any other
-            salient details (e.g., browser version, OS).
-        </div>
+    <h2>Unhandled server error</h2>
+    <div class='entry'>
+        We just encountered an unforeseen error that has been logged and emailed to
+        our development team.  If you'd like to report this error to us manually
+        as well, please feel free to <a href='/contact'>contact us</a> and let
+        us know what you were doing at the time of the error and any other
+        salient details (e.g., browser version, OS).
     </div>
 {% endblock page %}
 
