--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -1,6 +1,6 @@
 {% load tags %}
 {% load url from future %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% url 'home' as home %}
 {% url 'about' as about %}
